# izneo-get

./: .gitignore  README.md  TODO.md  VERSION  changelog.md  changelog.txt  izneo_basket.py  izneo_get.cfg.sample  izneo_get.py  izneo_get_selenium.cfg.sample  izneo_get_selenium.py  izneo_infos.py  izneo_list.py  pyproject.toml  requirements.txt
izneo_get/: __main__.py  action.py  action_from_query.py  book_infos.py  config.py  config_from_args.py  config_from_file.py  config_from_query.py  no_plugin_found_exception.py  test_plugin.py  tools.py
izneo_get/plugins/: archive.py  archives.py  izneo.py  site_processor.py  template.py  webtoons.py
tests/: context.py  test_archive_plugin.py  test_archives_plugin.py  test_config.py  test_config_from_args.py  test_config_from_file.py  test_config_query.py  test_izneo_plugin.py  test_site_processor.py  test_tools.py
tests/resources/: config_full.ini  config_missing_values.ini  crypted_image.txt
