[tool.poetry]
name = "izneo-get"
version = "1.0.0"
description = "Permet de récupérer une BD dans la limite des capacités de notre compte."
authors = ["izneo-get <izneo-get@noreply.github.com>"]
license = "GNU GPLv3"
readme = "README.md"
packages = [{include = "izneo_get"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
inquirer = "^3.1.3"
pycryptodome = "^3.18.0"
tqdm = "^4.65.0"
pytest = "^7.3.1"
opencv-python = "^4.7.0.72"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
Pillow = "^10.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
