[tool.poetry]
name = "izneo-get"
version = "1.0.3"
description = "Permet de récupérer une BD dans la limite des capacités de notre compte."
authors = ["izneo-get <izneo-get@noreply.github.com>"]
license = "GNU GPLv3"
readme = "README.md"
packages = [{include = "izneo_get"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
inquirer = "^3.1.3"
pycryptodome = "^3.19.0"
tqdm = "^4.66.1"
pytest = "^7.4.3"
opencv-python = "^4.8.1.78"
beautifulsoup4 = "^4.12.2"
Pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
