[project]
name = "izneo-get"
version = "1.0.3"
description = "Permet de récupérer une BD dans la limite des capacités de notre compte."
authors = [
    { name = "izneo-get", email = "izneo-get@noreply.github.com" }
]
license = { text = "GNU GPLv3" }
readme = "README.md"

requires-python = ">=3.10"

dependencies = [
    "requests>=2.32.5,<3.0.0",
    "inquirer>=3.4.1,<4.0.0",
    "pycryptodome>=3.23.0,<4.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "opencv-python>=4.12.0.88,<5.0.0",
    "beautifulsoup4>=4.14.2,<5.0.0",
    "Pillow>=10.4.0,<11.0.0",
    "numpy>=2.2.6,<3.0.0",
    "cryptography>=46.0.3",
]

[project.optional-dependencies]
# Optional dependency groups; install with `pip install .[dev]` or your frontend (hatch/poetry) equivalent
dev = [
    "pytest>=7.4.4,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
